[package]
name = "alternate-future"
description = "Simple promise/future library with continuations that don't block."
version = "0.1.1"
authors = ["Jameson Ernst <j.patrick.ernst@gmail.com>"]
license = "MIT"
repository = "https://github.com/jpernst/alternate-future"


[dependencies]
spin = "*"
num_cpus = "*"


