[package]
name = "alternate-future"
description = "Simple promise/future library with continuations that don't block."
version = "0.1.3"
authors = ["Jameson Ernst <j.patrick.ernst@gmail.com>"]
license = "MIT"
repository = "https://github.com/jpernst/alternate-future"


[dependencies]
spin = "0.3"
num_cpus = "0.2"
lazy_static = "0.1"


